--- a/app/templates/city.html
+++ b/app/templates/city.html
@@ -48,6 +48,65 @@
             </div>
         </div>
         <div style="margin-top: 60px;">
+            {% for spot in recomSpots %}
+            <div class="spot-block">
+                <div class="spot-image-block">
+                    <div id="carousel{{spot.spotId}}" class="carousel slide" data-ride="carousel">
+                        <ol class="carousel-indicators">
+                            <li data-target="#carousel{{spot.spotId}}" data-slide-to="0" class="active"></li>
+                            <li data-target="#carousel{{spot.spotId}}" data-slide-to="1"></li>
+                            <li data-target="#carousel{{spot.spotId}}" data-slide-to="2"></li>
+                            <li data-target="#carousel{{spot.spotId}}" data-slide-to="3"></li>
+                        </ol>
+                        <div class="carousel-inner" style="height: 100%;">
+                            {% for image in spot.images %}
+                            <div class="carousel-item">
+                                <img class="d-block w-100" src="{{ image }}" alt="First slide"
+                                    style="width:auto !important; height:100%; margin-left: auto; margin-right: auto;">
+                            </div>
+                            {% endfor %}
+                        </div>
+                        <a class="carousel-control-prev" href="#carousel{{spot.spotId}}" role="button" data-slide="prev"
+                            style="background-color: #00000026 !important;">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Previous</span>
+                        </a>
+                        <a class="carousel-control-next" href="#carousel{{spot.spotId}}" role="button" data-slide="next"
+                            style="background-color: #00000026 !important;">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Next</span>
+                        </a>
+                    </div>
+                </div>
+                <div class="spot-info-block">
+                    <div>
+                        <a class="spot-name" href="/dev/spot/{{ spot.spotId }}">{{ spot.name }}&nbsp;&nbsp;<i class="fas fa-thumbs-up" style="color: red;"></i></a>
+                        <a class="fas fa-plus-circle spot-add-icon-block" id="as{{ spot.spotId }}">
+                            <!-- <img src="/dev/static/assets/add-icon.png" id="as{{ spot.spotId }}" class="spot-add-icon"> -->
+                        </a>
+                    </div>
+                    <div>
+                        <div class="city-desc-block">
+                            {{ spot.location }}
+                        </div>
+                        <a class="fas fa-caret-down spot-collapse-icon" data-toggle="collapse" href="#op{{spot.spotId}}"
+                            role="button" aria-expanded="false" aria-controls="op{{spot.spotId}}">
+                            <!-- <img src="/dev/static/assets/down-triangle.png" style="width:100%"> -->
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="collapse" id="op{{spot.spotId}}">
+                <div class="spot-detail-block">
+                    <div class="spot-desc">
+                        <span>{{ spot.description }}</span>
+                    </div>
+                    <div class="spot-time">
+                        <span>Open time: {{ spot.openTime }}</span>
+                    </div>
+                </div>
+            </div>
+            {% endfor %}
             {% for spot in popSpots %}
             <div class="spot-block">
                 <div class="spot-image-block">
